--- a/formalism.tex
+++ b/formalism.tex
@@ -459,6 +459,12 @@ By the inductive hypothesis, there are functorial calculus derivations $\vlder{\
 \end{proof}
 %----------
 
+%--------------
+\begin{example}
+Figure~\vref{figure:ExampleAtomicFlows} has three examples of calculus of structures derivations transformed into functorial calculus derivations.
+\end{example}
+%------------
+
 %--------------------------------------
 \begin{lemma}\label{lemma:CoSDerInContext}
 Given a calculus of structures derivation $\vlder{\Phi}{}{\beta}{\alpha}$ and a context $\xi\vlhole$, a calculus of structures derivation $\vlder{\Psi}{}{\xi\{\beta\}}{\xi\{\alpha\}}$ can be constructed, such that the number of inference rule instances in $\Psi$ is the same as the number of inference rule instances in $\Phi$, and the size of the largest formula in $\Psi$ is the sum of the largest formula in $\Phi$ and $\size{\xi\vlhole}$.
