--- a/sks.tex
+++ b/sks.tex
@@ -68,9 +68,9 @@ and the \emph{invertible}\index{inference rule!invertible} (\emph{logical}) rule
 \]
 \end{definition}
 
-\TODO{Reference Complexity paper by Alessio and Paola:}
+The calculus of structures and system $\SKS$ were originally defined in terms of equivalence classes of formulae, called `structures', and without the above invertible logical rules. However, we find it more convenient to use formulae instead, since it makes it simpler to `trace atom occurrences', which we will see in Section~\ref{section:ExtractingFlowsFromDerivations}. We now show that the two approaches are morally the same.
 
-The calculus of structures and system $\SKS$ were originally defined in terms of equivalence classes of formulae, called `structures', instead of formulae. However, we find it more convenient to use formulae and the above invertible rules, since it makes it simpler to `trace atom occurrences'. We now show that the two approaches are morally the same.
+\TODO{State that the following are standard results found in the literature, except the final theorem.}
 
 %------------------------------------------------------
 \begin{definition}\label{definition:EquivalenceRelation}
