--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -1,6 +1,20 @@
 \chapter{Normal Forms}
 
-\TODO{Informal explanation of the different normal forms.}
+Intro:
+\begin{itemize}
+\item Sequent Calculus: normal form means `cut free'. Not topological. Syntactic.
+\item To get syntax independence of proofs we need syntax independence of normalisation.
+\item in deep inference we have locality and top-down symmetry.
+\begin{itemize}
+\item locality gives topology; and
+\item symmetry gives generalisation of cut-elimination.
+\end{itemize}
+The minimal ammount of information needed to describe these things: Atomic Flows.
+\end{itemize}
+
+Not a big surprise that we can describe this with atomic flows (by design). Later we get the big surprise that we can obtain this using (only) atomic flows.
+
+\TODO{Informal explanation of the different normal forms, starting from `streamlinig'.}
 
 \TODO{Alessio said: `\emph{I think it's a mistake to consider a derivation weakly streamlined with respect to a polarity. It would be better to say that it is weakly streamlined with the respect to the positive subflow, given a polarity, or something like this.}'}
 
