Fixed bibliographi look

--- a/thesis.tex
+++ b/thesis.tex
@@ -138,12 +138,12 @@
 %\input{appendix_b.tex}
 %\input{appendix_c.tex}
 
-\par\vfil\null\newpage
-{\pagestyle{fancy}
-\lhead   [\rm{\textbf{\thepage}}]{\scriptsize\textsc{BIBLIOGRAPHY}}
-\rhead   [\sl{\textbf{{ \leftmark}}}]{\rm{{\thepage}}}
-\cfoot{}
-\pagestyle{fancy}
+%\par\vfil\null\newpage
+%{\pagestyle{fancy}
+%\lhead   [\rm{\textbf{\thepage}}]{\scriptsize\textsc{BIBLIOGRAPHY}}
+%\rhead   [\sl{\textbf{{ \leftmark}}}]{\rm{{\thepage}}}
+%\cfoot{}
+%\pagestyle{fancy}
 \small
 \bibliography{di-biblio}
 
