--- a/thesis.tex
+++ b/thesis.tex
@@ -52,7 +52,7 @@
 
 \degree{Doctor of Philosophy}
 \author{Tom Erik Gundersen}
-\title{Atomic Flows and Normalisation in Deep Inference}
+\title{A General View of Normalisation through Atomic Flows}
 \degreeyear{July 2009}
 \norestrictions
 
@@ -70,7 +70,7 @@
 \thispagestyle{plain}
 {\begin{center}
 \vspace*{1.7cm}
-{\def\baselinestretch{1.2}\Huge\bf Atomic Flows and Normalisation in Deep Inference \par}
+{\def\baselinestretch{1.2}\Huge\bf A General View of Normalisation through Atomic Flows \par}
 \vspace{4cm}
 %\newline
 {\begin{center}{\huge Tom Erik Gundersen }\end{center}}
