--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -2,6 +2,8 @@
 
 \section{Extracting Flows from Derivations}\label{section:ExtractingFlowsFromDerivations}
 
+We now define the mapping from derivations to atomic flows. As we said, the idea is that structural rule instances map to the respective atomic-flow vertices, and the edges trace the atoms between rule instances. We first state a fact, whose proof is immediate.
+
 %------------------------------------------------
 \begin{proposition}\label{proposition:FlowUnique}
 Given an\/ $\SKS$ derivation\/ $\Phi$, there is a unique atomic flow $\phi$ such that:
