--- a/local_reductions.tex
+++ b/local_reductions.tex
@@ -1,6 +1,8 @@
 %======================================
 \chapter{Local Reductions}
 
+In this chapter, we see local transformations, which are based on reduction rules. It is convenient to classify reduction rules into those for weakening and those for contraction. After seeing flow reductions and tying them with derivations, in Section~\ref{section:Soundness}, we explore some of their basic properties, in the two short Sections~\ref{section:TerminationConfluence} and \ref{section:FlowRewriteComplexity}.
+
 \begin{definition}\label{definition:FlowGraphicalExpressions}
 In Figure~\vref{figure:ReductionRules}, we define graphical expressions of the kind $r\colon\phi'\to\psi'$, where $r$ is a name and $\phi'$ and $\psi'$ are flows.
 \end{definition}
@@ -290,8 +292,8 @@ Given a super-streamlined atomic flow $\phi$, if $\phi\to_\frc^\star\psi$ and $\
 %------------
 
 
-%=======================================
-\section{Soundness}\label{section:soundness}
+%===========================================
+\section{Soundness}\label{section:Soundness}
 
 %---------------------------------------
 \begin{definition}\label{definition:SoundRedcutionRule}
