Added remark justifying reductions

--- a/global_reductions.tex
+++ b/global_reductions.tex
@@ -38,7 +38,13 @@ Given a reduction $R$ and two atomic flows $\phi$ and $\psi$, such that $\phi\ma
 \end{remark}
 %-----------
 
-\TODO{Add example.}
+\TODO{Read:}
+
+%-------------
+\begin{remark}
+Given derivations $\Phi$ and $\Psi$, with atomic flows $\phi$ and $\psi$, respectively; and a reduction ${\mathrel R}$, such that $\phi\mathrel{R}\psi$; then the definition of reduction ensures the atom occurrences in the premiss (resp., conclusion) of $\Phi$ and $\Psi$ coincide, and that the mapping from atom occurrences to edges is preserved by the reduction. In the next definition we require the premisses (resp., conclusions) to be equal.
+\end{remark}
+%-----------
 
 %--------------------------------------------------
 \begin{definition}\label{definition:SoundRedcution}
