Changed definition of qmisr and QMISR

--- a/global_reductions/threshold_formulae.tex
+++ b/global_reductions/threshold_formulae.tex
@@ -779,10 +779,10 @@ and\/ $\size{\Gammasf^n_k\avec1n}$ is $n^{\Ord{\log n}}$.
 \begin{definition}\label{definition:QuasipolynomialMultipleSubflowRemoval}
 For every $n>0$, we define
 \begin{itemize}
-\item the reduction $\to_{\frqmis_n}$ (where $\frqmis$ stands for \emph{quasipolynomial multiple isolated subflows}\index{Quasipolynomial Multiple Isolated Subflows Remover!reduction}); and
-\item the \emph{Quasipolynomial Multiple Isolated Subflows Remover}\index{Quasipolynomial Multiple Isolated Subflows Remover!operator}, $\QMISR_n$,
+\item the reduction ${\to_{\frqmis_n}}$ (where $\frqmis$ stands for \emph{quasipolynomial multiple isolated subflows}\index{Quasipolynomial Multiple Isolated Subflows Remover!reduction}); and
+\item and the operator the \emph{Quasipolynomial Multiple Isolated Subflows Remover}\index{Quasipolynomial Multiple Isolated Subflows Remover!operator}, $\QMISR_n$,
 \end{itemize}
-as follows: Given atoms $\avec 1n$, instantiate $\to_{\frmis_n}$ and $\MISR_n$ with
+to be special cases of ${\to_{\frmis_n}}$ and $\MISR_n$, respectively, such that, given atoms $\avec 1n$,
 \begin{itemize}
 \item $N=n$;
 \item for $0\le k\le n$ and $1\le i\le n$, $\gamma_{k,i}=(\th kn\avec1n)\{a_i/\fff\}$; and
