Conclusions is no longer it's own part

--- a/thesis.tex
+++ b/thesis.tex
@@ -128,7 +128,7 @@
 \input{global_reductions.tex}
 \input{local_reductions.tex}
 \input{main_result.tex}
-\part{Conclusions}
+%\part{Conclusions}
 \input{conclusions.tex}
 \printindex
 %\part{Appendices}
