--- a/introduction.tex
+++ b/introduction.tex
@@ -2,47 +2,16 @@
 
 This thesis introduces \emph{atomic flows}, a language for studying normalisation of derivations in classical propositional logic.
 
+As for natural deduction and the sequent calculus \cite{Gent:69:Investig:xi}, we intend normalisation as eliminating cuts, or, more in general, `detours', from derivations. However, contrary to natural deduction and the sequent calculus, we consider derivations to be top-down symmetric and `detours' to be more than just the existence of cuts.
 
+Atomic flows were motivated by wanting to generalise traditional normalisation, based on elimination of inference rules, to a new notion of normalisation based on elimination of dependencies between inference rules. In order to formalise the notion of `detours', atomic flows were defined by discarding from derivations all but the information about casual relations between creation and destruction of atoms (see Figure~\vref{figure:ExampleAtomicFlows}).
 
-Using atomic flows we both describe new and generalised normal forms of derivations as well as normalisation procedures with novel proprties.
+We claim that atomic flows give us a more general view of normalisation because they gives us new normal forms, of which the traditional normal forms are special cases; at the same time they show that we need less of the information available to us in order to obtain normalisation.
 
-We claim that atomic flows give us a more general view of normalisation because we get more, in terms of normal forms, of which the traditional normal forms are special cases, and in terms of more normalisation procedures and more freedom in designing them; and we pay less, in the sense that we use less of the information available in the derivations in order to normalise.
+Due to the top-down symmetry, and the generalisation of `detours', atomic flows allow us to describe a range of new normal forms (see Definition~\vref{definition:FlowNormalForms}). In the special cases where `cut elimination' makes sense, the new normal forms coincide with the traditional ones, as expected (see \vref{proposition:FlowNormalFormsNoUpper}).
 
-Atomic flows are designed by removing all non-essential information from derivations from the point of view of describing normal forms. It turns out that all we need in order to
-\begin{itemize}
-\item removes information, which is why we pay less; and
-\item are symmetric which is why we get more.
-\end{itemize}
+Furthermore, it turned out that the information contained in atomic flows is sufficient to design normalisation procedures. This is surprising, since atomic flows throw away all information about logical connectives and logical inference rules, exactly the information we expected to be most crucial in order to obtain normalisation.
 
-Atomic flows give us a huge advantage since it gives us a language to work in.
+In fact, the principal advantage of atomic flows is that it allows us to use the graphical language of atomic flows to describe the gist of our results. Once the language is mastered, the technical details of most of our results can easily be reconstructed based on the illustrations alone. Illustrations describing our normalisation procedures are given in Definition~\vref{definition:IsolatedSubflowRemoval}, Definition~\vref{definition:PathBreaker}, Definition~\vref{definition:MultipleIsolatedSubflowsRemoval} and Figure~\vref{figure:ReductionRules}.
 
-\begin{itemize}
-\item we define normal forms in terms of structural information; and
-\item we perform normalisation using structural information.
-\end{itemize}
-
-In the past, in natural deduction and the sequent calculus, normalisation was considered a delicate property because the rules of a system had to be designed carefully to obtain the normalisation results.
-
-We find that normalisation is not a delicate property, on the contrary, we can take great liberties in designing our rules.
-\begin{itemize}
-%----
-\item
-In traditional proof theory, a proof is on normal form if it does not contain the cut rule. Normalisation is therefore the same as cut elimination.
-%----
-\item
-In deep inference we have a more liberal notion of what a proof is. In particular, we have proofs from which the cut rule can not be eliminated.
-%----
-\item
-In this thesis we present a generalisation of normal forms of proofs. In particular we hold the view that:
-%----
-\item
-A proof is a geometric object and a proof on normal form is a proof with a certain geometric property.
-%----
-\item
-%----
-\item
-\end{itemize}
-
-In the first part of the thesis I introduce derivations and summarise some standard results we will use later on. In the second part I define atomic flows and show their relationship with derivations (see Figure~\vref{figure:ExampleAtomicFlows}), and define normal forms of derivations in terms of atomic flows (see Definition~\vref{definition:FlowNormalForms}). In the third, and final, part of the thesis we define `atomic flow reductions', which 
-
-In  we show some examples of extracting atomic flows from derivations. Once the relationship between derivations and their associated atomic flows are understood we use atomic flows in  to describe normal forms of derivations. Finally in Definition~\vref{definition:Simplifier}, Definition~\vref{definition:IsolatedSubflowRemoval}, Definition~\vref{definition:PathBreaker}, Definition~\vref{definition:MultipleIsolatedSubflowsRemoval}, and Figure~\vref{figure:ReductionRules} we show `atomic-flow reductions' which are the basic steps with which we can build normalisation procedures.
+The thesis is split in three parts. In the first part I introduce derivations in classical propositional logic and show some elementary results. In the second part I define atomic flows, show how flows are extracted from derivations and define normal forms of derivations in terms of their associated atomic flows. Finally, in the last part I define several normalisation procedures based on rewriting atomic flows.
