Explained ai-decomposed form

--- a/atomic_flows_and_derivations.tex
+++ b/atomic_flows_and_derivations.tex
@@ -357,7 +357,9 @@ whose flow is $\phi$.
 %----------
 
 %=================================================================
-\section{Normal Forms of Derivations}\label{section:DerNormalForm}
+\section{A Normal Form of Derivation}\label{section:DerNormalForm}
+
+In this section we introduce the \emph{$\ai$-decomposed form} of a derivation. The reason for introducing this normal form is that we will often find it convenient to assume that identity instances appear at the top and cut instances appear at the bottom of a derivation. The important features of this normal form is that a derivation can be transformed into $\ai$-decomposed form without changing its atomic flow, and without significantly changing its size.
 
 \begin{definition}\label{definition:aiDecomposedForm}
 Given two derivations
@@ -377,7 +379,7 @@ for some atoms $a_1,\dots,a_n,b_1,\dots,b_m$, such that $\Phi$ and $\Psi$ have t
 \end{definition}
 
 \begin{convention}\label{convention:AlternativeAiDecomposedForm}
-Given a derivation $\Phi$ and an $\ai$-decomposed form of $\Phi$:
+Given a derivation $\Phi$ and an $\ai$-decomposed form of\/ $\Phi$:
 \[
 \vlder{}{\SKS\setminus\{\aid,\aiu\}}
 {
