Added comment about results from elsewhere

--- a/sks.tex
+++ b/sks.tex
@@ -4,6 +4,8 @@
 
 We now define the standard deductive system for classical propositional logic in deep inference $\SKS$\index{$\SKS$} \cite{Brun:03:Atomic-C:oz,Brun:06:Cut-Elim:cq,Brun:06:Locality:zh,BrunTiu:01:A-Local-:mz}. For an excellent reference to previous work on normalisation in $\SKS$, see \cite{Brun:04:Deep-Inf:rq}. Subsystems of $\SKS$ are used throughout this thesis.
 
+The results presented in this section, with the exception of Theorem~\vref{theorem:SKSComplete}, are standard results which can be found in the literature. We include the proofs for completeness and as means for giving examples of the functorial calculus.
+
 \newcommand{\ai   }{{\mathsf{ai}}}
 \newcommand{\aw   }{{\mathsf{aw}}}
 \newcommand{\ac   }{{\mathsf{ac}}}
